plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'Capstone'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

bootJar {
	enabled = true
}

jar {
	enabled = false
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// DB (MySQL or MariaDB)
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.2'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// 테스트
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Servlet API (JWT 인증 필터 등 필요 시)
	implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Swagger (API 문서화)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	// 외부 API 호출용
	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
}

tasks.named('test') {
	useJUnitPlatform()
}

springBoot {
	mainClass = 'Capstone.SafeWay.SafeWayApplication'
}
